<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_import"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera"
        />

    <TextView
        android:id="@+id/nbVisages"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nbVisages" />
    <Button
        android:id="@+id/trouver_jeux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_jeux_activity"
        android:visibility="invisible"
        />
    <ImageView
        android:id="@+id/imgview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/place_holder" />

</LinearLayout>